# Spiking-FPGA-Toolchain

./: .editorconfig  .env.example  .pre-commit-config.yaml  .python-path  ARCHITECTURE.md  AUTONOMOUS_DEPLOYMENT_ORCHESTRATOR.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL_V2.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL_V3.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_QUANTUM_COMPLETION_REPORT.md  CHANGELOG.md  CHANGELOG_v2.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GENERATION45_COMPLETION_REPORT.md  GENERATION4_AUTONOMOUS_COMPLETION_REPORT.md  GENERATION5_COMPLETION_REPORT.md  GENERATION_8_9_10_COMPLETION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_DEPLOYMENT.md  PROJECT_CHARTER.md  README.md  RESEARCH_ANALYSIS.md  SDLC_ANALYSIS.md  SECURITY.md  compilation_performance_history.json  generation4_validation_report.json  pyproject.toml  pytest.ini  requirements-dev.txt  security_scan.json  validate_autonomous_sdlc.py  validate_generation4.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  platform_support.yml  research_discussion.yml
bench_gen1/hdl/: memory_interface.v  snn_top.v  spike_router.v  synthesize.tcl
bench_gen1/reports/: optimization_summary.txt  resource_utilization.txt
bench_gen2/hdl/: constraints.xdc  synthesize.tcl
bench_gen2_backup_20250821_121518/hdl/: memory_interface.v  snn_top.v
bench_gen2_backup_20250821_121518/reports/: resource_utilization.txt
bench_gen3/hdl/: memory_interface.v  snn_top.v
bench_gen3_backup_20250821_121518/hdl/: lif_neuron.v  synthesize.tcl
bench_gen3_backup_20250821_121518/reports/: optimization_summary.txt  resource_utilization.txt
benchmarks/: research_benchmarks.py
checkpoints/: 2ff3d3365232.pkl  5aa2731e9fb6.pkl  d62d38675111.pkl  periodic_1755000244.pkl
deploy/: autonomous_orchestrator.py  cosmic_consciousness_deployment.py
deployment/: production_deployment_orchestrator.py
docker/: Dockerfile  docker-compose.yml
docs/: AUTONOMOUS_SDLC_INTEGRATION_GUIDE.md  ROADMAP.md
docs/adr/: 0001-adr-template.md  0002-fpga-target-selection.md
docs/guides/: README.md
examples/: README.md  simple_mnist.yaml  simple_test_network.yaml
kubernetes/: deployment.yaml  storage.yaml
src/spiking_fpga/: __init__.py  cli.py  cli_old.py  core.py  generation2_robust_compiler.py  generation3_optimized_compiler.py  generation4_ai_enhanced_compiler.py  network_compiler.py  performance_optimizer.py  robust_network_compiler.py  scalable_compiler.py  scalable_distributed_compiler.py
test_output/hdl/: memory_interface.v  snn_top.v  synthesize.tcl
test_output/reports/: optimization_summary.txt  resource_utilization.txt
test_output_gen1/hdl/: memory_interface.v  snn_top.v  synthesize.tcl
test_output_gen1/reports/: resource_utilization.txt
test_output_gen2/hdl/: memory_interface.v  snn_top.v  synthesize.tcl
test_output_gen2/reports/: network_analysis.txt  optimization_summary.txt  resource_utilization.txt
test_output_gen2_backup_20250821_120830/hdl/: memory_interface.v  snn_top.v  synthesize.tcl
test_output_gen3/hdl/: memory_interface.v  snn_top.v  synthesize.tcl
tests/: __init__.py  autonomous_quality_gates.py  conftest.py  test_comprehensive_integration.py  test_generation4_ai_enhanced.py  test_generation5_breakthrough.py
(+142 files in other folders)
